MY_ORG/src/objects/Volunteer_Shift_Worker__c.object
<CustomObject>
    <fields>
        <fullName>IsShiftVolunteer__c</fullName>
        <formula>$User.Id == Volunteer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsShiftVolunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Shift_End_Time__c</fullName>
        <formula>Volunteer_Shift__r.Shift_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift_Hours__c</fullName>
        <formula>Volunteer_Shift__r.Shift_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Start_Time__c</fullName>
        <formula>Volunteer_Shift__r.Shift_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unconfirmed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Activity__c</fullName>
        <formula>Volunteer_Shift__r.Volunteer_Job__r.Volunteer_Activity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <formula>Volunteer_Shift__r.Volunteer_Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Organization__c</fullName>
        <formula>Volunteer_Shift__r.Volunteer_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Shift__c</fullName>
        <label>Volunteer Shift</label>
        <referenceTo>Volunteer_Shift__c</referenceTo>
        <relationshipLabel>Volunteer Shift Workers</relationshipLabel>
        <relationshipName>Volunteer_Shift_Workers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteer_Shift_Workers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Shift Worker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Shift-{0000}</displayFormat>
        <label>Volunteer Shift Worker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shift Workers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>